--- a/style.css
+++ b/style.css
@@ -1,153 +1,189 @@
-/* 
-🌟 APP: Make Netflix
-
-Create a fetchMovies() function that will make a dynamic API call to what you need 👇
-========================================
-
-- fetchMovies()
-
-** fetchMovies takes in an URL, a div id or class from the HTML, and a path (poster or backdrop)
-
-
-
-These are the 3 main functions you must create 👇
-========================================
-
-- getOriginals()
-
-- getTrendingNow()
-
-- getTopRated()
-
-
-** These functions will provide the URL you need to fetch movies of that genere **
-
-These are all the DIV ID's you're gonna need access to 👇
-========================================================
-#1 CLASS 👉 'original__movies' = Div that holds Netflix Originals
-#2 ID 👉 'trending' = Div that holds trending Movies
-#3 ID 👉 'top_rated' = Div that holds top rated Movies
-*/
-
-// Call the main functions the page is loaded
-window.onload = () => {
-  getOriginals()
-  getTrendingNow()
-  getTopRated()
-}
-
-// ** Helper function that makes dynamic API calls **
-// path_type 👉 (backdrop, poster)
-// dom_element 👉 (trending, top rated)
-// fetchMovies('https://api.themoviedb.org/3/movie/top_rated?api_key=19f84e11932abbc79e6d83f82d6d1045&language=en-US&page=1', 'top_rated', 'backdrop_path')
-function fetchMovies(url, dom_element, path_type) {
-  fetch(url)
-    .then(response => {
-      if (response.ok) {
-        return response.json()
-      } else {
-        throw new Error('something went wrong')
-      }
-    })
-    .then(data => {
-      showMovies(data, dom_element, path_type)
-    })
-    .catch(error_data => {
-      console.log(error_data)
-    })
-}
-
-//  ** Function that displays the movies to the DOM **
-showMovies = (movies, dom_element, path_type) => {
+body {
+    background-color: #111;
+    color: white;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin: 0;
+  }
   
-  // Create a variable that grabs id or class
-  var moviesEl = document.querySelector(dom_element)
-
-  // Loop through object
-  for (var movie of movies.results) {
-
-    // Within loop create an img element
-    var imageElement = document.createElement('img')
-
-    // Set attribute
-    imageElement.setAttribute('data-id', movie.id)
-
-    // Set source
-    imageElement.src = `https://image.tmdb.org/t/p/original${movie[path_type]}`
-
-    // Add event listener to handleMovieSelection() onClick
-    imageElement.addEventListener('click', e => {
-      handleMovieSelection(e)
-    })
-    // Append the imageElement to the dom_element selected
-    moviesEl.appendChild(imageElement)
+  .dropdown-container {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    padding-top: 3px;
+    display: none;
   }
-}
-
-// ** Function that fetches Netflix Originals **
-function getOriginals() {
-  var url =
-    'https://api.themoviedb.org/3/discover/tv?api_key=19f84e11932abbc79e6d83f82d6d1045&with_networks=213'
-  fetchMovies(url, '.original__movies', 'poster_path')
-}
-// ** Function that fetches Trending Movies **
-function getTrendingNow() {
-  var url =
-    'https://api.themoviedb.org/3/trending/movie/week?api_key=19f84e11932abbc79e6d83f82d6d1045'
-  fetchMovies(url, '#trending', 'backdrop_path')
-}
-// ** Function that fetches Top Rated Movies **
-function getTopRated() {
-  var url =
-    'https://api.themoviedb.org/3/movie/top_rated?api_key=19f84e11932abbc79e6d83f82d6d1045&language=en-US&page=1'
-  fetchMovies(url, '#top_rated', 'backdrop_path')
-}
-
-// ** BONUS **
-
-async function getMovieTrailer(id) {
-  var url = `https://api.themoviedb.org/3/movie/${id}/videos?api_key=19f84e11932abbc79e6d83f82d6d1045&language=en-US`
-  return await fetch(url).then(response => {
-    if (response.ok) {
-      return response.json()
-    } else {
-      throw new Error('something went wrong')
-    }
-  })
-}
-
-const setTrailer = trailers => {
-  const iframe = document.getElementById('movieTrailer')
-  const movieNotFound = document.querySelector('.movieNotFound')
-  if (trailers.length > 0) {
-    movieNotFound.classList.add('d-none')
-    iframe.classList.remove('d-none')
-    iframe.src = `https://www.youtube.com/embed/${trailers[0].key}`
-  } else {
-    iframe.classList.add('d-none')
-    movieNotFound.classList.remove('d-none')
+  
+  .dropdown {
+    background-color: black;
+    padding: 8px;
+    border-radius: 4px;
+    width: 100px;
   }
-}
-
-const handleMovieSelection = e => {
-  const id = e.target.getAttribute('data-id')
-  const iframe = document.getElementById('movieTrailer')
-  // here we need the id of the movie
-  getMovieTrailer(id).then(data => {
-    const results = data.results
-    const youtubeTrailers = results.filter(result => {
-      if (result.site == 'YouTube' && result.type == 'Trailer') {
-        return true
-      } else {
-        return false
-      }
-    })
-    setTrailer(youtubeTrailers)
-  })
-
-  // open modal
-  $('#trailerModal').modal('show')
-  // we need to call the api with the ID
-}
-
-
+  
+  .dropdown span {
+    cursor: pointer;
+  }
+  
+  .original__movies {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  
+  .profile:hover .dropdown-container {
+    display: block;
+  }
+  
+  .original__movies,
+  .movies__container {
+    padding-left: 50px;
+    display: flex;
+    overflow-x: scroll;
+    overflow: hidden;
+  }
+  
+  .original__movies::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .original__movies img {
+    margin-right: 10px;
+    height: 250px;
+    width: auto;
+  }
+  
+  .original__movies img,
+  .movies__container img {
+    transition: all 0.2s ease-out;
+    cursor: pointer;
+  }
+  
+  .original__movies img:hover,
+  .movies__container img:hover {
+    transform: scale(1.1);
+  }
+  
+  .movies__container img {
+    margin-right: 10px;
+    width: 200px;
+  }
+  
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding-top: 15px;
+  }
+  
+  .logo > img {
+    width: 120px;
+  }
+  
+  .profile {
+    position: relative;
+  }
+  
+  .profile > img {
+    width: 40px;
+  }
+  
+  img {
+    width: 100px;
+  }
+  
+  .featured {
+    height: 400px;
+    position: relative;
+    background-image: url('https://image.tmdb.org/t/p/original//3lBDg3i6nn5R2NKFCJ6oKyUo2j5.jpg');
+    background-size: cover;
+    background-position: center;
+    padding: 0 0 0 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .featured::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 7.4rem;
+    background-image: linear-gradient(
+      180deg,
+      transparent,
+      rgba(37, 37, 37, 0.61),
+      #111
+    );
+  }
+  
+  .netflixOriginals h2,
+  .movies__header h2 {
+    padding-left: 30px;
+  }
+  
+  .featured h2 {
+    font-size: 50px;
+    margin: 0;
+    z-index: 10;
+  }
+  
+  .featured .featured__buttons {
+    z-index: 10;
+  }
+  
+  .featured .featured__buttons button {
+    font-size: 16px;
+    color: white;
+    background-color: rgba(109, 109, 110, 0.7);
+    border: none;
+    padding: 8px 24px;
+    border-radius: 4px;
+  }
+  
+  .featured::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  
+  .featured .featured__buttons .button__play {
+    background-color: white;
+    color: black;
+  }
+  
+  .button__play i {
+    margin-right: 6px;
+  }
+  
+  .featured .featured__description {
+    max-width: 350px;
+    font-weight: 400;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
+    z-index: 10;
+  }
+  
+  .modal-body iframe {
+    width: 100%;
+  }
+  
+  .modal-body span {
+    color: #333;
+    width: 100%;
+    display: flex;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+  }
+  
